--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ piston = "0.53"
 piston2d-graphics = "0.41"
 pistoncore-glutin_window = "0.69"
 piston2d-opengl_graphics = "0.79"
+fastrand = "1.7"
